--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,6 @@ title=UML - REC-1;
 first_run=true;
 [MySQL]
 server=localhost;
-username=default;
-password=default;
-database=uml_rec_1;
+username=uml;
+password=uml123;
+database=uml_rec1_hendell;
