--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,7 @@ RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
 
 RewriteRule ^home*$ ./index.php?p=home
+RewriteRule ^user\/(\d+)*$ ./index.php?p=user&id=$1
 RewriteRule ^test*$ ./index.php?p=test
 
 <Files config.ini>
