--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,10 @@
 [REC-1]
 title=UML - REC-1;
 first_run=true;
+page_domain=false;
+enable_debug=true;
 [MySQL]
 server=localhost;
 username=uml;
 password=uml123;
-database=uml_rec1_hendell;
+database=uml_rec1;
