--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,8 @@ RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
 
 RewriteRule ^home*$ ./index.php?p=home
+RewriteRule ^login*$ ./index.php?p=login
+RewriteRule ^logout*$ ./index.php?p=logout
 RewriteRule ^user\/(\d+)*$ ./index.php?p=user&id=$1
 RewriteRule ^test*$ ./index.php?p=test
 
