--- a/.htaccess
+++ b/.htaccess
@@ -11,7 +11,9 @@ RewriteCond %{SCRIPT_FILENAME} !-f
 RewriteRule ^home*$ ./index.php?p=home
 RewriteRule ^login*$ ./index.php?p=login
 RewriteRule ^logout*$ ./index.php?p=logout
+RewriteRule ^page*$ ./index.php?p=page
 RewriteRule ^user\/(\d+)*$ ./index.php?p=user&id=$1
+RewriteRule ^formats\/(\w+)*$ ./index.php?p=formats&format=$1
 RewriteRule ^test*$ ./index.php?p=test
 
 <Files config.ini>
