--- a/.htaccess
+++ b/.htaccess
@@ -13,7 +13,7 @@ RewriteRule ^login*$ ./index.php?p=login
 RewriteRule ^logout*$ ./index.php?p=logout
 RewriteRule ^page*$ ./index.php?p=page
 RewriteRule ^user\/(\d+)*$ ./index.php?p=user&id=$1
-RewriteRule ^formats\/(\w+)\/(?>(?>\d+)|(list|add|edit|new|del)\/(\d+))*$ ./index.php?p=formats&format=$1&action=$2&id=$3
+RewriteRule ^formats\/(\w+)\/(?>(?>\d+)|(list|add|edit|new|del)\/(\w+)?)*$ ./index.php?p=formats&format=$1&action=$2&id=$3
 RewriteRule ^test*$ ./index.php?p=test
 
 <Files config.ini>
